Add Encryption and Decryption Code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=Authentication-Service
+secret.decryption.Key = India#321
+algorithm.payload.decryption = AES/CBC/PKCS5Padding
